add phpcs as a dev dependency

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,8 @@
             "email": "jack@4thwall.io"
         }
     ],
-    "require": {}
+    "require": {},
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.5"
+    }
 }
