--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {},
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5",
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0"
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
+        "wp-coding-standards/wpcs": "^2.3"
     }
 }
