--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@babel/register": "^7.10.5",
+    "eslint": "^7.7.0",
     "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0-beta.2"
+    "gulp-babel": "^8.0.0-beta.2",
+    "gulp-eslint": "^6.0.0"
   }
 }
