--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "@babel/core": "^7.11.1",
     "@babel/register": "^7.10.5",
     "eslint": "^7.7.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0-beta.2",
     "gulp-eslint": "^6.0.0"
