--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/core": "^7.11.1",
     "@babel/register": "^7.10.5",
     "eslint": "^7.7.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
