--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0-beta.2",
-    "gulp-eslint": "^6.0.0"
+    "gulp-eslint": "^6.0.0",
+    "gulp-rename": "^2.0.0"
   }
 }
