--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-babel": "^8.0.0-beta.2",
     "gulp-eslint": "^6.0.0",
     "gulp-rename": "^2.0.0",
+    "gulp-string-replace": "^1.1.2",
     "rimraf": "^3.0.2"
   }
 }
