--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-eslint": "^6.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-string-replace": "^1.1.2",
+    "path": "^0.12.7",
     "rimraf": "^3.0.2"
   }
 }
