--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A starter plugin and build process for making modern WordPress plugins",
   "main": "wp-gizmo.php",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
