--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,11 +6,11 @@ updates:
     directory: "/"
     target-branch: "development"
     schedule:
-      interval: "daily"
+      interval: "monthly"
 
   # Maintain dependencies for Composer
   - package-ecosystem: "composer"
     directory: "/"
     target-branch: "development"
     schedule:
-      interval: "daily"
+      interval: "monthly"
