--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
-        "automattic/phpcs-neutron-ruleset": "^3.3"
+        "automattic/phpcs-neutron-ruleset": "^3.3",
+        "phpunit/phpunit": "7.*"
     }
 }
